--- a/DEV_1/DEV_1.csproj
+++ b/DEV_1/DEV_1.csproj
@@ -41,9 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dev1.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UniqueSymbolsFinder.cs" />
+    <Compile Include="UniqueSymbols.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
