--- a/DEV_2/DEV_2/DEV_2.csproj
+++ b/DEV_2/DEV_2/DEV_2.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RussianPhoneticDictionary.cs" />
+    <Compile Include="StringLettersToSoundReplacer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
