--- a/DEV_3/DEV_3/DEV_3.csproj
+++ b/DEV_3/DEV_3/DEV_3.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="Company.cs" />
     <Compile Include="Employee.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Dev3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="SelectionCriteria.cs" />
