placed classes by files

--- a/DEV_4/DEV_4/DEV_4.csproj
+++ b/DEV_4/DEV_4/DEV_4.csproj
@@ -43,9 +43,13 @@
   <ItemGroup>
     <Compile Include="Discipline.cs" />
     <Compile Include="GUID.cs" />
+    <Compile Include="LaboratoryWork.cs" />
+    <Compile Include="Lection.cs" />
     <Compile Include="Materials.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="EntryPointClass.cs" />
+    <Compile Include="PresentationMaterial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seminar.cs" />
     <Compile Include="StringExtension.cs" />
   </ItemGroup>
   <ItemGroup>
