--- a/DEV_5/DEV_5/DEV_5.csproj
+++ b/DEV_5/DEV_5/DEV_5.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Plane.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpaceShip.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
