--- a/DEV_5/DEV_5/DEV_5.csproj
+++ b/DEV_5/DEV_5/DEV_5.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Bird.cs" />
     <Compile Include="EntryPoint.cs" />
     <Compile Include="IFlyable.cs" />
+    <Compile Include="ObjectFlewArgs.cs" />
     <Compile Include="Plane.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
