--- a/DEV_6/DEV_6/DEV_6.csproj
+++ b/DEV_6/DEV_6/DEV_6.csproj
@@ -42,7 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoDatabase.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="CommandCountAmountOfAuto.cs" />
+    <Compile Include="CommandCountBrands.cs" />
+    <Compile Include="CommandGetAveragePrice.cs" />
+    <Compile Include="CommandGetAvrPriceByBrand.cs" />
+    <Compile Include="CommandInvoker.cs" />
+    <Compile Include="EntryPoint.cs" />
+    <Compile Include="IConsoleCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
