--- a/DEV_6/DEV_6/DEV_6.csproj
+++ b/DEV_6/DEV_6/DEV_6.csproj
@@ -60,6 +60,7 @@
     <Content Include="AutomobileData.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="TruckData.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
