--- a/DEV_2/DEV_2UnitTest/DEV_2UnitTest.csproj
+++ b/DEV_2/DEV_2UnitTest/DEV_2UnitTest.csproj
@@ -54,6 +54,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="InputDataTests.cs" />
+    <Compile Include="StringLettersToSoundReplacerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
