--- a/DEV_9/DEV_9/DEV_9.csproj
+++ b/DEV_9/DEV_9/DEV_9.csproj
@@ -50,14 +50,13 @@
     <Compile Include="PageObjects\Gmail\AboutPage.cs" />
     <Compile Include="PageObjects\Gmail\HomePage.cs" />
     <Compile Include="PageObjects\Gmail\SingInPage.cs" />
+    <Compile Include="PageObjects\Mail\SingInPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PageObjects\Mail\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.Chrome.WebDriver.74.0.0\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.74.0.0\build\Selenium.Chrome.WebDriver.targets')" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.75.0.3770.8-beta\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.75.0.3770.8-beta\build\Selenium.WebDriver.ChromeDriver.targets')" />
