--- a/DEV_9/DEV_9/DEV_9.csproj
+++ b/DEV_9/DEV_9/DEV_9.csproj
@@ -47,11 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExpectedConditions.cs" />
-    <Compile Include="PageObjects\Gmail\AboutPage.cs" />
-    <Compile Include="PageObjects\Gmail\HomePage.cs" />
-    <Compile Include="PageObjects\Gmail\SingInPage.cs" />
-    <Compile Include="PageObjects\Mail\HomePage.cs" />
-    <Compile Include="PageObjects\Mail\SingInPage.cs" />
+    <Compile Include="PageObjects\Gmail\GmailAboutPage.cs" />
+    <Compile Include="PageObjects\Gmail\GmailHomePage.cs" />
+    <Compile Include="PageObjects\Gmail\GmailSingInPage.cs" />
+    <Compile Include="PageObjects\Mail\MailHomePage.cs" />
+    <Compile Include="PageObjects\Mail\MailSingInPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
