--- a/CW_5/CW_5/CW_5.csproj
+++ b/CW_5/CW_5/CW_5.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
-    <Compile Include="StudetExtension.cs" />
+    <Compile Include="StudentExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
