--- a/CW_8/CW_8/packages.config
+++ b/CW_8/CW_8/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Selenium.Support" version="4.0.0-alpha01" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.0.0-alpha01" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="3.0.0" targetFramework="net472" />
 </packages>
